# gerrit2git-archive

./: README.md  demo.py  demo_simple.py  pyproject.toml  run.py
src/: __init__.py  gerrit_api.py  git_manager.py  history_preserver.py  html_generator.py  main.py  metadata_exporter.py
tests/: __init__.py  mock_gerrit_server.py  test_gerrit_api.py  test_integration.py
